--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ jmespath==0.9.4
 jupyter-client==5.3.4
 jupyter-core==4.6.1
 lazy-object-proxy==1.4.3
+lxml==4.5.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 numpy==1.18.1
@@ -44,6 +45,7 @@ pyasn1-modules==0.2.8
 Pygments==2.5.2
 pylint==2.4.4
 python-dateutil==2.8.1
+python-docx==0.8.10
 python-dotenv==0.10.5
 pytz==2019.3
 pywin32==227
